# traffic_counter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
.pre-commit-cache/: db.db
docker/: Dockerfile.base
docs/: ARCHITECTURE.md  analysis.md  profile.md  python_scaling_patterns.md
docs/eda/: profiling_dashboard.py  python_scaling_patterns.py
docs/eda/__marimo__/session/: profiling_dashboard.py.json  python_scaling_patterns.py.json
src/: main.py
